# aigateway

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  compose.psql.yml  docker-compose.yml
ai_ex/: index.html  package.json  pnpm-lock.yaml
ai_ex/src/: App.tsx  index.css  main.tsx
config/: casbin_model.conf  config.yaml
src/: auth.rs  authz.rs  crypto.rs  main.rs
src/admin/: auth.rs  billing.rs  channels.rs  dashboard.rs  health.rs  me.rs  mod.rs  models.rs  moderation.rs  routing.rs  rules.rs  settings.rs  subscriptions.rs  usage.rs  users.rs  wallet.rs
src/balancer/: mod.rs
src/cache/: mod.rs
src/config/: loader.rs  types.rs
src/db/: backend.rs  channels.rs  mod.rs  models.rs  pg_backend.rs  rules.rs  sqlite_backend.rs  users.rs
src/domain/: channel.rs  mod.rs  model.rs  moderation.rs  routing.rs  usage.rs  user.rs
src/exchange_rate/: fetcher.rs
src/observability/: event.rs  event_bus.rs  mod.rs  trace.rs
src/pricing/: mod.rs  resolver.rs  service.rs  types.rs
src/provider/: anthropic.rs  anthropic_compat.rs  dashscope.rs  deepseek.rs  generic.rs  minimax.rs  mod.rs  openai.rs  sglang.rs  vllm.rs  zhipu.rs
src/ratelimit/: mod.rs
src/server/: handlers.rs  mod.rs  provider_pool.rs  ws.rs
src/service/: auth.rs  health.rs  health_probe.rs  mod.rs  moderation.rs  routing.rs  usage.rs
src/sso/: mod.rs
ui/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
web/: index.html
(+3106 files in other folders)
