[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dashmap = "6"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
casbin = "2.20"
bcrypt = "0.16"
jsonwebtoken = "9"
url = "2"
redis = { version = "0.28", features = ["tokio-comp", "json"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
aes-gcm = "0.10"
base64 = "0.22"
dotenvy = "0.15"
